--- a/helloworldfb.html
+++ b/helloworldfb.html
@@ -1,7 +1,7 @@
-```html
+html
 <!DOCTYPE html>
 <ol>Farmandeh Bana</ol>
-
+<!-- NAME: (Jarullah Bana) -->
 <!-- PROG PURPOSE: This is my first HTML program: Hello world -->
 <html lang="en">
 <head>
@@ -17,7 +17,7 @@
     <img src="world.jpg" width="400" alt="World Image" />
 </body>
 </html>
-```
+
 <ul>Radius: 3959 mile</ul>
 <li>fifth largest planet in the solar system</li>
 <li>water covers 70% of the surface</li>
