--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                         <li><a href="planet.html">HTML Tables & Iframes: The Planets</a></li>
                         <li><a href="software-eng.html">software-eng</a></li>
                         <li><a href="programming.html">programming</a></li>
+                        <li><a href="pvccweb.html">pvccweb</a></li>
+                        <li><a href="githubinfo.html">githubinfo</a></li>
+                       
                        
                     </ul>
                     <h2>Civic Engagement Project</h2>
@@ -71,6 +74,8 @@
                         <li><a href="personal_property_loops.py">Personal Property Loops</a></li>
                         <li><a href="personal_property_tax.py">Personal Property Tax</a></li>
                         <li><a href="ticket_sales.py">Ticket Sales</a></li>
+                        <li><a href="pvcc.py">paython to html pvcc tuition</a></li>
+                        <li><a href="tickets-w-html.py">tickets-w-html</a></li>
                     </ul>
                     <br>
                     <img src="index.jpg" alt="Index Image" style="width: 60%; display: block; margin: auto;">
